[gd_scene load_steps=8 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Assets/enemy1.png" type="Texture" id=2]
[ext_resource path="res://Assets/enemy2.png" type="Texture" id=3]
[ext_resource path="res://Assets/enemy_attack.png" type="Texture" id=4]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "attack2",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.2076, 71.6527 )

[node name="Boss" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -18.9129 )
frames = SubResource( 1 )
animation = "dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -14.254 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -76.788, -3.67868 )

[node name="DelayTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -22.7456
margin_top = -109.754
margin_right = 27.2544
margin_bottom = -98.754

[node name="EndTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_DelayTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
